--- a/css/main.css
+++ b/css/main.css
@@ -5,10 +5,13 @@
   font-weight: 400;
   color: #333;
 }
+a {
+  text-decoration: none;
+}
 /* BTN */
 .btn {
   height: 34px;
-  background-color: #eee linear-gradient(to bottom, #fcfcfc, #eee);
+  background: #eee linear-gradient(to bottom, #fcfcfc, #eee);
   border: 1px solid #d5d5d5;
   border-radius: 4px;
   display: inline-flex;
@@ -20,6 +23,7 @@
   cursor: pointer;
   box-sizing: border-box;
   position: relative;
+  color: #333;
 }
 .btn:hover::before{
   content: "";
@@ -28,12 +32,12 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,.7);
+  background: rgba(0,0,0,.07);
 }
 .btn.btn--primary {
   border: 1px solid #65b836;
   color: #fff;
-  background-color: #55a532 linear-gradient(#91dd70, #55ae2e);
+  background: #55a532 linear-gradient(#91dd70, #55ae2e);
 }
 
 /* INPUT TEXT */
@@ -57,3 +61,93 @@
 .input--text::-webkit-input-placeholder {color: #cacaca;}
 .input--text::-ms-input-placeholder {color: #cacaca;}
 .input--text::-moz-input-placeholder {color: #cacaca;}
+
+/* FLOAT CLEARFIX */
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: block;
+}
+.float--left {
+  float: left;
+}
+.float--right {
+  float: right;
+}
+
+/* HEADER */
+header {
+  border-bottom: 1px solid rgba(0,0,0,.75);
+  box-shadow: 0 0 5px rgba(0,0,0,.75);
+  background-color: #fff;
+}
+header .inner {
+  max-width: 980px;
+  height: 78px;
+  margin: 0 auto;
+}
+header .menu-group {
+  display: flex;
+  height: 100%;
+  align-items: center;
+}
+header .logo {
+  margin-right: 10px
+}
+header .logo a {
+  background: url("../img/logo.svg");
+  width: 32px;
+  height: 32px;
+  display: block;
+  text-indent: -9999px;
+}
+header .logo a:hover {
+  background: url("../img/logo_on.svg");
+}
+header .main-menu {
+  display: flex;
+}
+header .main-menu li a {
+  padding: 10px;
+  display: block;
+  color: #3c4146;
+}
+header .main-menu li a:hover {
+  color: #4078c0;
+}
+header .sign-group {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+header .btn-group {
+  display: flex;
+  order: 2;
+}
+header .btn-group .sign-in {
+  margin-right: 4px;
+}
+#search-form {
+  margin-right: 12px;
+  order: 1;
+}
+#search {
+  width: 160px;
+  font-size: 14px;
+}
+#search + [type="submit"] {
+  display: none;
+}
+header .sub-menu {
+  display: flex;
+  margin-right: 10px;
+}
+header .sub-menu li a{
+  display: block;
+  padding: 8px;
+  font-size: 13px;
+  color: #3c4146;
+}
+header .sub-menu li a:hover {
+  color: #4078c0;
+}
